<resources>
    <string name="app_name">Yemek Tarifleri</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="my_text"><u>Log in</u>.</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_up_with_email">Sign up with email</string>

</resources>